// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a removed task template 1`] = `
<div
  className="taskTemplateRow removedTask highPriority"
>
  <div
    className="taskTemplateTitle"
  >
    Task Template Title
  </div>
  <div
    className="taskTemplateInfoControls"
  >
    <div
      className="taskTemplateAssigneeAvatar"
      style={
        Object {
          "backgroundImage": "url(https://bit.ly/2weRwJm)",
        }
      }
    />
    <div
      className="taskTemplateDueDate"
    >
      <div
        className="taskTemplateDueDateLabel"
      >
        Due:
      </div>
      <div
        className="taskTemplateDueDateText"
      >
        <span>
          Jul 19, 2017
        </span>
      </div>
    </div>
    <div
      className="taskTemplateRejectButton"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`renders a selected task template 1`] = `
<div
  className="taskTemplateRow highPriority"
>
  <div
    className="taskTemplateTitle"
  >
    Task Template Title
  </div>
  <div
    className="taskTemplateInfoControls"
  >
    <div
      className="taskTemplateAssigneeAvatar"
      style={
        Object {
          "backgroundImage": "url(https://bit.ly/2weRwJm)",
        }
      }
    />
    <div
      className="taskTemplateDueDate"
    >
      <div
        className="taskTemplateDueDateLabel"
      >
        Due:
      </div>
      <div
        className="taskTemplateDueDateText"
      >
        <span>
          Jul 19, 2017
        </span>
      </div>
    </div>
    <div
      className="taskTemplateRejectButton"
      onClick={[Function]}
    />
  </div>
</div>
`;
